--- a/README.textile
+++ b/README.textile
@@ -1,38 +1,46 @@
-= DmSessionStore
+h1. DmSessionStore
 
-== Description
+h2. Description
 
-Describe your gem here ... 
+  For those using DataMapper with Rails there was no option for storing sessions
+  in a database (most people remove ActiveRecord). This little gem adds the
+  required classes to use DataMapper to store sessions in the database.
 
-== Installation
+h2. Installation
 
-    sudo gem install dm_session_store
+    sudo gem install tpitale-dm_session_store
 
-== Usage
+h2. Usage
 
-    require 'dm_session_store'
+  In Rails config/environment.rb
 
-== License
+    config.gem 'tpitale-dm_session_store, :lib => 'dm_session_store'
+    config.action_controller.session_store = CGI::Session::DMSessionStore
 
-Copyright (c) <year> <copyright holders>
+  Obviously, for this to work, you had better follow one of the many online
+  resources for using DataMapper with Rails.
 
-Permission is hereby granted, free of charge, to any person
-obtaining a copy of this software and associated documentation
-files (the "Software"), to deal in the Software without
-restriction, including without limitation the rights to use,
-copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the
-Software is furnished to do so, subject to the following
-conditions:
+h2. License
 
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.
+  Copyright (c) 2009 Tony Pitale
 
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
-OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
-HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
-WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
-OTHER DEALINGS IN THE SOFTWARE.
+  Permission is hereby granted, free of charge, to any person
+  obtaining a copy of this software and associated documentation
+  files (the "Software"), to deal in the Software without
+  restriction, including without limitation the rights to use,
+  copy, modify, merge, publish, distribute, sublicense, and/or sell
+  copies of the Software, and to permit persons to whom the
+  Software is furnished to do so, subject to the following
+  conditions:
+
+  The above copyright notice and this permission notice shall be
+  included in all copies or substantial portions of the Software.
+
+  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+  OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+  NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+  HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+  WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+  OTHER DEALINGS IN THE SOFTWARE.
