--- a/README.textile
+++ b/README.textile
@@ -2,45 +2,45 @@ h1. DmSessionStore
 
 h2. Description
 
-  For those using DataMapper with Rails there was no option for storing sessions
-  in a database (most people remove ActiveRecord). This little gem adds the
-  required classes to use DataMapper to store sessions in the database.
+For those using DataMapper with Rails there was no option for storing sessions
+in a database (most people remove ActiveRecord). This little gem adds the
+required classes to use DataMapper to store sessions in the database.
 
 h2. Installation
 
-    sudo gem install tpitale-dm_session_store
+  sudo gem install tpitale-dm_session_store
 
 h2. Usage
 
-  In Rails config/environment.rb
+In Rails config/environment.rb
 
-    <pre><code>config.gem 'tpitale-dm_session_store, :lib => 'dm_session_store'
-    config.action_controller.session_store = CGI::Session::DMSessionStore</code></pre>
+  config.gem 'tpitale-dm_session_store, :lib => 'dm_session_store'
+  config.action_controller.session_store = CGI::Session::DMSessionStore
 
-  Obviously, for this to work, you had better follow one of the many online
-  resources for using DataMapper with Rails.
+Obviously, for this to work, you had better follow one of the many online
+resources for using DataMapper with Rails.
 
 h2. License
 
-  Copyright (c) 2009 Tony Pitale
+Copyright (c) 2009 Tony Pitale
 
-  Permission is hereby granted, free of charge, to any person
-  obtaining a copy of this software and associated documentation
-  files (the "Software"), to deal in the Software without
-  restriction, including without limitation the rights to use,
-  copy, modify, merge, publish, distribute, sublicense, and/or sell
-  copies of the Software, and to permit persons to whom the
-  Software is furnished to do so, subject to the following
-  conditions:
+Permission is hereby granted, free of charge, to any person
+obtaining a copy of this software and associated documentation
+files (the "Software"), to deal in the Software without
+restriction, including without limitation the rights to use,
+copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the
+Software is furnished to do so, subject to the following
+conditions:
 
-  The above copyright notice and this permission notice shall be
-  included in all copies or substantial portions of the Software.
+The above copyright notice and this permission notice shall be
+included in all copies or substantial portions of the Software.
 
-  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-  EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
-  OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-  NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
-  HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
-  WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-  FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
-  OTHER DEALINGS IN THE SOFTWARE.
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+OTHER DEALINGS IN THE SOFTWARE.
